# bbe

./: CMakeLists.txt  README.adoc
doc/: LICENSE  bbe-manpage.asciidoc  bbe.1  bbe.adoc  bbe.asciidoc  bbe_manpage.adoc
src/: bbe.c  bbe.h  buffer.c  config.h.in  execute.c  xmalloc.c
